--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,16 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title, >MVP Standard Model Input/Output Page</title>
-    </head>
-    <body>
-        <h1 style="text-align: center;">This is a basic Flask ML app containerised in Docker</h1>
-        <form name="data_entry_form", method="POST", style="text-align:center;">
-        <br>
-        Input1: <input type="text" name="input1" style="text-align:left;" placeholder="Enter something useful" required/>
-        <br><br>
-        Input2: <input type="text" name="input2" style="text-align:left;" placeholder="Enter something else useful" required/>
-        <br><br>
-        <button type="submit" name="submit" value="submit">Submit</button>
-        </form>
-        <br>
-        <h2 style="text-align: center">Output of the model below</h2>
-        <p style="text-align:center;">{{output}}</p>
-    </body>
-</html>
+{% block content %}
+    <h1>Bootstrap-Flask Demo Application</h1>
+<p>This demo uses Bootstrap version 5.</p>
+<ul>
+    <li><a href="{{ url_for('test_form') }}">Form</a></li>
+    <li><a href="{{ url_for('test_nav') }}">Nav</a></li>
+    <li><a href="{{ url_for('test_bootswatch') }}">Bootswatch</a></li>
+    <li><a href="{{ url_for('test_pagination') }}">Pagination</a></li>
+    <li><a href="{{ url_for('test_flash') }}">Flash Messages</a></li>
+    <li><a href="{{ url_for('test_table') }}">Table</a></li>
+    <li><a href="{{ url_for('test_icon') }}">Icon</a></li>
+    <li><a href="{{ url_for('test_icons') }}">Icons</a></li>
+</ul>
+{% endblock %}
